--- a/index.html
+++ b/index.html
@@ -9,84 +9,41 @@
     <link rel="stylesheet" href="style/style.css" />
     <title>Alchemy AOE Community</title>
     <style>
-        :root {
-            --spacing: 10px;
-            --title-height: 30px;
-            --grid-gap: 5px;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        html, body {
-            width: 1920px;
-            height: 1080px;
-            overflow: hidden;
-            font-family: Arial, sans-serif;
-            font-size: 14px;
-        }
-
-        header {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 100%;
-            height: 50px;
-            margin: 0; /* Touches viewport top */
-        }
-
-        header h1 {
-            font-size: 40px;
-        }
-
-        .main-content {
-            max-width: 1920px;
-            width: 100%;
-            height: 850px; /* 1080px - 50px header - 30px footer - 150px buffer */
-            padding: var(--spacing); /* 10px on all sides */
-            margin: 0 auto;
-        }
-
-        .main-content.grid-home {
+        .main-content.grid-home
+        {
             display: grid;
             grid-template-columns: repeat(4, 1fr);
-            grid-template-rows: 413px 412px; /* 825px total + 5px gap = 830px */
-            gap: var(--grid-gap);
-            height: 830px; /* Fits within main-content after padding */
-            background-color: rgba(0, 0, 0, 0.05); /* Debug: Visualize grid bounds */
+            grid-template-rows: 340px 415px;
+            gap: var(--grid-gap, 10px); /* Fallback to 10px if --grid-gap is undefined */
+            max-width: 1900px; /* Moved from style.css */
+            margin: 0 auto; /* Ensures centering */
+            height: 775px;
+            grid-template-areas:
+                "about mission docs seasons"
+                "maps refs people seasons";
         }
 
-        .nav-group {
-            box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-            display: flex;
-            flex-direction: column;
-            background-clip: content-box; /* Prevent image/shadow overflow */
+        .nav-group.about { grid-area: about; }
+        .nav-group.mission { grid-area: mission; }
+        .nav-group.docs { grid-area: docs; }
+        .nav-group.maps { grid-area: maps; }
+        .nav-group.refs { grid-area: refs; }
+        .nav-group.people { grid-area: people; }
+        .nav-group.seasons { grid-area: seasons; }
+
+        .nav-group.docs,
+        .nav-group.maps,
+        .nav-group.refs,
+        .nav-group.people,
+        .nav-group.seasons {
+            background-color: rgba(255,255,255,0.3);
         }
 
-        .nav-group__title {
-            background-color: #eee;
-            padding: 0 3px;
-            height: var(--title-height);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .nav-group__title h2 {
-            font-size: 28px;
-        }
-
-        .nav-group__content {
-            padding: 3px;
-            display: flex;
-            flex-direction: column;
-            gap: 3px;
-            flex-grow: 1;
-            overflow: hidden;
-        }
+        .nav-group.docs { background-image: url('images/Image_Documents.jpg'); }
+        .nav-group.maps { background-image: url('images/Image_Maps.jpg'); }
+        .nav-group.refs { background-image: url('images/Image_OutsideRefs.jpg'); }
+        .nav-group.people { background-image: url('images/Image_People.jpg'); }
+        .nav-group.seasons { background-image: url('images/Season_Mashup.jpg'); }
 
         .nav-group.about > .nav-group__content,
         .nav-group.mission > .nav-group__content {
@@ -104,117 +61,36 @@
             margin-bottom: 0;
         }
 
-        .nav-group.seasons {
-            height: 100%; /* Full grid height */
-        }
-
         .nav-group.seasons > .nav-group__content {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
             grid-gap: 3px;
             padding: 3px;
-            height: calc(100% - var(--title-height)); /* 830px - 30px = 800px */
+            height: calc(100% - var(--title-height));
         }
 
         .nav-group.seasons a {
-            height: 140px; /* 800px / 8 = 100px */
+            height: 140px;
             padding: 3px;
-            width: 100%;
+            width: 90%;
             display: flex;
             align-items: center;
             justify-content: center;
-            background-color: #f0f0f0;
             text-decoration: none;
-            color: #333;
-            font-size: 0rem;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            white-space: nowrap;
+            color: #fff;
+            font-size: 1.5rem;
+            text-shadow: 0px 0px 4px #000;
+            background-size: 100% 100%;
         }
 
-        .nav-group.seasons a:hover {
-            background-color: #ddd;
-        }
-
-        footer {
-            position: absolute;
-            bottom: 0; /* Touches viewport bottom */
-            width: 100%;
-            height: 30px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 20px;
-            line-height: 20px; /* Match font-size */
-            background-color: #f8f8f8; /* Debug: Visualize footer */
-            z-index: 10; /* Above grid content */
-        }
-
-        footer p, footer a {
-            margin: 0;
-            padding: 0;
-            line-height: 20px;
-        }
-
-        footer a {
-            color: #007bff;
-            text-decoration: none;
-        }
-
-        footer a:hover {
-            text-decoration: underline;
-        }
-
-        /* Responsive styles for smaller screens */
-        @media (max-width: 1919px) {
-            html, body {
-                overflow-y: auto;
-            }
-            .main-content.grid-home {
-                display: flex;
-                flex-direction: column;
-                height: auto;
-                padding-bottom: 50px;
-                background-color: transparent; /* Reset debug background */
-            }
-            .nav-group {
-                height: auto;
-                min-height: 400px;
-            }
-            .nav-group.seasons {
-                height: auto;
-                min-height: 785px;
-            }
-            .nav-group.seasons > .nav-group__content {
-                height: auto;
-                min-height: 755px;
-            }
-            footer {
-                position: relative;
-                margin-top: 20px;
-                background-color: transparent; /* Reset debug background */
-            }
-        }
-
-        /* Adjustments for larger screens */
-        @media (min-width: 1920px) {
-            html, body {
-                height: 1080px;
-                overflow: hidden;
-                margin: 0;
-            }
-            .main-content {
-                height: 850px;
-                margin: 0 auto;
-            }
-            .main-content.grid-home {
-                grid-template-rows: 413px 412px;
-                height: 830px;
-            }
-            .nav-group.seasons > .nav-group__content {
-                height: calc(100% - var(--title-height));
-            }
-        }
+        .nav-group.seasons a:nth-child(1) { background-image: url('images/ALS1_Banner.png'); }
+        .nav-group.seasons a:nth-child(2) { background-image: url('images/ALS2_Banner.png'); }
+        .nav-group.seasons a:nth-child(3) { background-image: url('images/ALS3_Banner.png'); }
+        .nav-group.seasons a:nth-child(4) { background-image: url('images/ALS4_Banner.png'); }
+        .nav-group.seasons a:nth-child(5) { background-image: url('images/ALS5_Banner.jpg'); }
+        .nav-group.seasons a:nth-child(6) { background-image: url('images/ALS6_Banner.jpg'); }
+        .nav-group.seasons a:nth-child(7) { background-image: url('images/ALS7_Banner.jpg'); }
+        .nav-group.seasons a:nth-child(8) { background-image: url('images/ALS8_Banner.jpg'); }
     </style>
 </head>
 <body>
@@ -223,77 +99,67 @@
     </header>
 
     <div class="main-content grid-home">
-        <div class="nav-group about" style="grid-area: 1 / 1 / 2 / 2;" aria-label="About Us section" role="region">
+        <section class="nav-group about">
             <div class="nav-group__title">
                 <h2>ABOUT US</h2>
             </div>
             <div class="nav-group__content">
-                <p>
-                    The Alchemy AOE Community is a free and non-profit organization of random map scripters, tournament hosts, content creators, and skilled players dedicated to the advancement of custom random maps in Age of Empires II: Definitive Edition.
-                </p>
-                <p>
-                    We are independent from the official Age of Empires developers, allowing us to prioritize creativity and free expression over marketing returns.
-                </p>
+                <p>The Alchemy AOE Community is a free and non-profit organization of random map scripters, tournament hosts, content creators, and skilled players dedicated to the advancement of custom random maps in Age of Empires II: Definitive Edition.</p>
+                <p>We are independent from the official Age of Empires developers, allowing us to prioritize creativity and free expression over marketing returns.</p>
             </div>
-        </div>
-        <div class="nav-group mission" style="grid-area: 1 / 2 / 2 / 3;" aria-label="Our Mission section" role="region">
+        </section>
+        <section class="nav-group mission">
             <div class="nav-group__title">
                 <h2>OUR MISSION</h2>
             </div>
             <div class="nav-group__content">
-                <p>
-                    The Alchemy AOE Community publishes quality standards for custom random maps, curating the finished products to feature in thematic competitions.
-                </p>
-                <p>
-                    Our skill calculator, matchmaking algorithms, and custom map creation software are without equal in the AOE2 universe.
-                </p>
-                <p>
-                    Join us to help Age of Empires II reach its full potential.
-                </p>
+                <p>The Alchemy AOE Community publishes quality standards for custom random maps, curating the finished products to feature in thematic competitions.</p>
+                <p>Our skill calculator, matchmaking algorithms, and custom map creation software are without equal in the AOE2 universe.</p>
+                <p>Join us to help Age of Empires II reach its full potential.</p>
             </div>
-        </div>
-        <div class="nav-group docs" style="grid-area: 1 / 3 / 2 / 4; background-color: rgba(255,255,255,0.3); background-image: url('images/Image_Documents.jpg');" aria-label="Documents section" role="region">
+        </section>
+        <section class="nav-group docs">
             <div class="nav-group__title">
                 <h2>DOCUMENTS</h2>
             </div>
             <div class="nav-group__content">
-                <a href="#" style="font-size: 1rem;">Charter</a>
-                <a href="https://github.com/Alchemy-AOE-Community/CHEM-Published-Specifications" style="font-size: 1rem;">Specifications</a>
+                <a href="#">Charter</a>
+                <a href="https://github.com/Alchemy-AOE-Community/CHEM-Published-Specifications">Specifications</a>
             </div>
-        </div>
-        <div class="nav-group maps" style="grid-area: 2 / 1 / 3 / 2; background-color: rgba(255,255,255,0.3); background-image: url('images/Image_Maps.jpg');" aria-label="Maps section" role="region">
+        </section>
+        <section class="nav-group maps">
             <div class="nav-group__title">
                 <h2>MAPS</h2>
             </div>
             <div class="nav-group__content">
-                <a href="https://github.com/Alchemy-AOE-Community/CHEM-Competition-Map-Packs" style="font-size: 1rem;">League Collections</a>
-                <a href="https://github.com/f-istvan/Current-Alchemy-League-Map-Downloader/tree/main" style="font-size: 1rem;">Autodownloader</a>
-                <a href="https://github.com/Alchemy-AOE-Community/CHEM-Random-Map-Scripts/tree/_About_" style="font-size: 1rem;">Repository</a>
+                <a href="https://github.com/Alchemy-AOE-Community/CHEM-Competition-Map-Packs">League Collections</a>
+                <a href="https://github.com/f-istvan/Current-Alchemy-League-Map-Downloader/tree/main">Autodownloader</a>
+                <a href="https://github.com/Alchemy-AOE-Community/CHEM-Random-Map-Scripts/tree/_About_">Repository</a>
             </div>
-        </div>
-        <div class="nav-group refs" style="grid-area: 2 / 2 / 3 / 3; background-color: rgba(255,255,255,0.3); background-image: url('images/Image_OutsideRefs.jpg');" aria-label="References section" role="region">
+        </section>
+        <section class="nav-group refs">
             <div class="nav-group__title">
                 <h2>RMS REFERENCES</h2>
             </div>
             <div class="nav-group__content">
-                <a href="https://docs.google.com/document/d/1jnhZXoeL9mkRUJxcGlKnO98fIwFKStP_OBozpr0CHXo/" style="font-size: 1rem;">Scripting Guide</a>
-                <a href="https://docs.google.com/spreadsheets/d/1llyn7FWKEtmss_WE-6hinMItpsV-h-6qsY8xBlkxUzw/" style="font-size: 1rem;">Constants List</a>
-                <a href="https://docs.google.com/spreadsheets/d/1Fg4BM8dY0FoJ5yoQtL5S4f9LEcMIrYbH0skrFBnrS14/" style="font-size: 1rem;">Terrain List</a>
-                <a href="https://ugc.aoe2.rocks/general/" style="font-size: 1rem;">Game Mechanics</a>
-                <a href="https://ca2map.streamlit.app/" style="font-size: 1rem;">Icon Creator</a>
+                <a href="https://docs.google.com/document/d/1jnhZXoeL9mkRUJxcGlKnO98fIwFKStP_OBozpr0CHXo/">Scripting Guide</a>
+                <a href="https://docs.google.com/spreadsheets/d/1llyn7FWKEtmss_WE-6hinMItpsV-h-6qsY8xBlkxUzw/">Constants List</a>
+                <a href="https://docs.google.com/spreadsheets/d/1Fg4BM8dY0FoJ5yoQtL5S4f9LEcMIrYbH0skrFBnrS14/">Terrain List</a>
+                <a href="https://ugc.aoe2.rocks/general/">Game Mechanics</a>
+                <a href="https://ca2map.streamlit.app/">Icon Creator</a>
             </div>
-        </div>
-        <div class="nav-group people" style="grid-area: 2 / 3 / 3 / 4; background-color: rgba(255,255,255,0.3); background-image: url('images/Image_People.jpg');" aria-label="People section" role="region">
+        </section>
+        <section class="nav-group people">
             <div class="nav-group__title">
                 <h2>PEOPLE</h2>
             </div>
             <div class="nav-group__content">
-                <a href="../Map_Team.html" style="font-size: 1rem;"> Map Scripters</a>
-                <a href="#" style="font-size: 1rem;">Map Quality Team</a>
-                <a href="#" style="font-size: 1rem;">Content Creators</a>
+                <a href="../Map_Team.html">Map Scripters</a>
+                <a href="#">Map Quality Team</a>
+                <a href="#">Content Creators</a>
             </div>
-        </div>
-        <div class="nav-group seasons" style="grid-area: 1 / 4 / 3 / 5; background-color: rgba(255,255,255,0.3); background-image: url('images/Season_Mashup.jpg');" aria-label="Competitions section" role="region">
+        </section>
+        <section class="nav-group seasons">
             <div class="nav-group__title">
                 <h2>COMPETITIONS</h2>
             </div>
@@ -307,7 +173,7 @@
                 <a href="ALS7.html">ALS7</a>
                 <a href="ALS8.html">ALS8</a>
             </div>
-        </div>
+        </section>
     </div>
 
     <footer>
