--- a/RedirectLatest.html
+++ b/RedirectLatest.html
@@ -2,93 +2,83 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Redirecting to Latest Files…</title>
-  <style>
-    body { font: 1rem sans-serif; padding: 1rem; }
-    #status { margin-bottom: 1em; color: #333; }
-    a { display: block; margin: .25em 0; }
-  </style>
-</head>
-<body>
-  <p id="status">Initializing…</p>
-  <div id="links"></div>
 
+  <!--
+    RedirectLatest.html
+    -------------------
+    Purpose:
+      Redirects to the “latest” PDF in a subfolder whose name matches the
+      ?file=PREFIX query‐parameter.  Fits inside the
+      Alchemy-AOE-Community.github.io Pages site.
+
+    Usage (for Writer/PDF links):
+      https://Alchemy-AOE-Community.github.io/RedirectLatest.html?file=PREFIX
+
+    Example:
+      To point at the latest CHEM-HDBK-L2 file, use
+         https://Alchemy-AOE-Community.github.io/RedirectLatest.html?file=CHEM-HDBK-L2
+
+    Notes:
+      • PREFIX must exactly match the subfolder name under
+        CHEM-Published-Specifications (branch download-to-click-links).
+      • The script will fetch GitHub’s API, sort names, and auto-redirect
+        clients to the raw.githubusercontent.com URL of the newest file.
+  -->
+
+  <title>Redirecting to latest PDF…</title>
   <script>
-  (async () => {
-    const status = document.getElementById('status');
-    const links  = document.getElementById('links');
+  (async()=>{
+    // 1) Grab the caller’s prefix (= also the subfolder name)
     const prefix = new URLSearchParams(location.search).get('file');
     if (!prefix) {
-      status.textContent = 'Error: no “?file=” parameter provided';
+      document.body.textContent = 'Error: no “?file=” parameter provided.';
       return;
     }
 
+    // 2) Repo info for your PDFs
     const owner  = 'Alchemy-AOE-Community';
     const repo   = 'CHEM-Published-Specifications';
     const branch = 'download-to-click-links';
-    const folder = encodeURIComponent(prefix);
-    const apiUrl = `https://api.github.com/repos/${owner}/${repo}`
-                 + `/contents/${folder}?ref=${branch}`;
+    const folder = encodeURIComponent(prefix);  // subfolder exactly named after prefix
 
+    // 3) List that folder via GitHub API
+    const apiUrl = `https://api.github.com/repos/${owner}/${repo}/contents/${folder}?ref=${branch}`;
     let dir;
     try {
       const res = await fetch(apiUrl);
-      if (!res.ok) throw new Error(res.statusText);
+      if (!res.ok) throw new Error(res.status + ' ' + res.statusText);
       dir = await res.json();
-    } catch (err) {
-      status.textContent = `Error fetching “${prefix}”: ${err.message}`;
+    } catch (e) {
+      document.body.textContent = 'Error fetching folder “' + prefix + '”: ' + e;
       return;
     }
 
-    // 1) Filter all files starting with the prefix
-    const files = dir.filter(item =>
-      item.type === 'file'
-      && item.name.startsWith(prefix)
-      && item.name.includes('.')
-    );
-
-    if (!files.length) {
-      status.textContent = `No files found for “${prefix}”`;
+    // 4) Filter and sort filenames in that folder
+    const matches = dir
+      .map(item => item.name)
+      .filter(name => name.startsWith(prefix))
+      .sort();
+    if (!matches.length) {
+      document.body.textContent = `No files beginning with “${prefix}” found.`;
       return;
     }
+    const latest = matches.pop();
 
-    // 2) Group by extension
-    const latestByExt = files.reduce((acc, { name }) => {
-      const ext = name.slice(name.lastIndexOf('.') + 1).toLowerCase();
-      acc[ext] = acc[ext] || [];
-      acc[ext].push(name);
-      return acc;
-    }, {});
-
-    // 3) Sort groups, pick latest, build URLs & links
-    const urls = {};
-    Object.entries(latestByExt).forEach(([ext, names]) => {
-      names.sort();
-      const latest = names.pop();
-      const rawUrl = `https://raw.githubusercontent.com/${owner}`
-                   + `/${repo}/${branch}/${folder}/${encodeURIComponent(latest)}`;
-      urls[ext] = { latest, rawUrl };
-
-      const a = document.createElement('a');
-      a.href       = rawUrl;
-      a.target     = '_blank';
-      a.textContent= `Latest .${ext}: ${latest}`;
-      links.appendChild(a);
-    });
-
-    const exts = Object.keys(urls);
-    status.textContent = `Found ${exts.length} file type${exts.length>1?'s':''}.`;
-
-    // 4) Redirect priority: PDF first, else only ext
-    let targetExt = exts.includes('pdf') ? 'pdf' : exts[0];
-    if (targetExt) {
-      // show links briefly, then navigate
-      setTimeout(() => {
-        status.textContent = `Redirecting to latest .${targetExt}…`;
-        window.location.href = urls[targetExt].rawUrl;
-      }, 200);
-    }
+    // 5) Build the raw.githubusercontent URL & redirect
+    const target = `https://raw.githubusercontent.com/${owner}/${repo}/${branch}/${folder}/${latest}`;
+    window.location.replace(target);
   })();
+  </script>
+</head>
+<body>
+  <p>Redirecting… if that fails, <a id="fallback" href="#">click here</a>.</p>
+  <script>
+    // Monkey-patch replace so we can set the fallback link
+    const orig = window.location.replace;
+    window.location.replace = (u)=>{
+      document.getElementById('fallback').href = u;
+      orig.call(window.location, u);
+    };
   </script>
 </body>
 </html>
